---
source: crates/compiler/semantic/tests/common/mod.rs
expression: snapshot
---
--- Input 1 (ERROR) ---
fn test() -> felt { return (); }
--- Diagnostics ---
[2001] Error: type mismatch in return statement: expected `felt`, got `()`
   ╭─[ semantic_tests::functions::return_types::test_return_type_validation:1:28 ]
   │
 1 │ fn test() -> felt { return (); }
   │              ──┬─          ─┬  
   │                ╰─────────────── function `test` declared here to return `felt`
   │                             │  
   │                             ╰── type mismatch in return statement: expected `felt`, got `()`
   │                             │  
   │                             ╰── Tuples cannot be used directly in arithmetic operations
───╯

============================================================

--- Input 2 (ERROR) ---
fn test() { return 42; }
--- Diagnostics ---
[2001] Error: type mismatch in return statement: expected `()`, got `felt`
   ╭─[ semantic_tests::functions::return_types::test_return_type_validation:1:20 ]
   │
 1 │ fn test() { return 42; }
   │ │                  ─┬  
   │ ╰────────────────────── function `test` declared here to return `()`
   │                     │  
   │                     ╰── type mismatch in return statement: expected `()`, got `felt`
───╯

============================================================

--- Input 3 (ERROR) ---
fn test() -> () { return 42; }
--- Diagnostics ---
[2001] Error: type mismatch in return statement: expected `()`, got `felt`
   ╭─[ semantic_tests::functions::return_types::test_return_type_validation:1:26 ]
   │
 1 │ fn test() -> () { return 42; }
   │              ─┬          ─┬  
   │               ╰────────────── function `test` declared here to return `()`
   │                           │  
   │                           ╰── type mismatch in return statement: expected `()`, got `felt`
───╯

============================================================

--- Input 4 (ERROR) ---
struct Point {x:felt} fn test() -> felt { return Point { x: 1 }; }
--- Diagnostics ---
[2001] Error: type mismatch in return statement: expected `felt`, got `Point`
   ╭─[ semantic_tests::functions::return_types::test_return_type_validation:1:50 ]
   │
 1 │ struct Point {x:felt} fn test() -> felt { return Point { x: 1 }; }
   │                                    ──┬─          ───────┬──────  
   │                                      ╰─────────────────────────── function `test` declared here to return `felt`
   │                                                         │        
   │                                                         ╰──────── type mismatch in return statement: expected `felt`, got `Point`
   │                                                         │        
   │                                                         ╰──────── Did you mean to access the `x` field?
───╯

============================================================

--- Input 5 (ERROR) ---
fn test() -> felt { return undefined_var; }
--- Diagnostics ---
[1001] Error: Undeclared variable 'undefined_var'
   ╭─[ semantic_tests::functions::return_types::test_return_type_validation:1:28 ]
   │
 1 │ fn test() -> felt { return undefined_var; }
   │                            ──────┬──────  
   │                                  ╰──────── Undeclared variable 'undefined_var'
───╯
